# libintptr

./: .cproject  .gitignore  .project  CMakeLists.txt
include/: intptr.h
src/: intptr.cpp
test/: CMakeLists.txt  redirect.cmake  test-atomic_hammer.cpp  test-atomic_hammer.expected  test-atomic_int_ptr.cpp  test-atomic_int_ptr.expected  test-int_ptr.cpp  test-int_ptr.expected
